@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-06-24T01:16:02Z",
+  "timestamp" : "2022-06-24T08:19:29Z",
   "count_outdated" : 348,
   "uniques_outdated" : 199,
-  "count" : 374,
-  "uniques" : 216,
+  "count" : 375,
+  "uniques" : 217,
   "clones" : [
     {
       "timestamp": "2022-06-10T00:00:00Z",
@@ -93,6 +93,13 @@
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-06-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
