@@ -1,5 +1,5 @@
 {
-  "count": 26,
+  "count": 27,
   "uniques": 5,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-06-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-06-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
